// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChecklistCard Theme: jobStreet Default 1`] = `
<div
  class="Box__root backgroundColor__card borderColor__default marginBottom__medium"
>
  <div
    class="paddingBottom__smaller"
  >
    <input
      aria-describedby="1-message"
      class="Checkbox__realCheckbox"
      id="1"
      type="checkbox"
    />
    <div
      class="Checkbox__content"
    >
      <label
        class="Checkbox__label Box__root borderColor__default paddingTop__smaller paddingRight__gutter paddingLeft__gutter"
        for="1"
        style="min-height: 44px;"
      >
        <div
          class="Checkbox__checkboxContainer Box__root borderColor__default marginRight__medium"
          style="width: 24px; height: 24px; margin-top: 10px;"
        >
          <div
            class="Checkbox__checkbox borderRadius__standard Box__root backgroundColor__input borderColor__default borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxHover borderRadius__standard Box__root backgroundColor__input borderColor__formAccent borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxFocus boxShadow__focus borderRadius__standard transition__fast Box__root backgroundColor__input borderColor__default"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxChecked backgroundColor__formAccent borderRadius__standard transition__fast Box__root backgroundColor__input borderColor__formAccent borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxDisabled borderRadius__standard transition__fast Box__root backgroundColor__inputDisabled borderColor__default borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxCritical borderRadius__standard transition__fast Box__root borderColor__critical borderWidth__standard"
            style="opacity: 0;"
          />
          <svg
            class="Checkbox__checkboxIcon fill__white transition__fast Box__root borderColor__default"
            height="100%"
            viewBox="90.471 302.809 823 823"
            width="100%"
          >
            <path
              d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
            />
          </svg>
        </div>
        <div
          class="Text__block Box__root borderColor__default"
        >
          <span
            class="Text__block color__neutral fontFamily__body fontSize__interaction fontWeight__regular"
            style="transform: none;"
          >
            Label 1
          </span>
        </div>
      </label>
    </div>
    <div
      class="Box__root borderColor__default paddingRight__gutter paddingLeft__gutter"
    >
      <div
        class="Text__block Box__root borderColor__default paddingBottom__small"
        id="1-message"
        tabindex="-1"
      >
        <span
          class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__regular"
        >
          <div
            class="FieldMessage__content"
          >
            <div
              style="min-height: 20px;"
            />
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="Divider__root Box__root borderColor__default"
  >
    <div
      class="Divider__divider borderWidth__standard borderColor__standard"
    />
  </div>
  <div
    class="paddingBottom__smaller"
  >
    <input
      aria-describedby="2-message"
      class="Checkbox__realCheckbox"
      id="2"
      type="checkbox"
    />
    <div
      class="Checkbox__content"
    >
      <label
        class="Checkbox__label Box__root borderColor__default paddingTop__smaller paddingRight__gutter paddingLeft__gutter"
        for="2"
        style="min-height: 44px;"
      >
        <div
          class="Checkbox__checkboxContainer Box__root borderColor__default marginRight__medium"
          style="width: 24px; height: 24px; margin-top: 10px;"
        >
          <div
            class="Checkbox__checkbox borderRadius__standard Box__root backgroundColor__input borderColor__default borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxHover borderRadius__standard Box__root backgroundColor__input borderColor__formAccent borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxFocus boxShadow__focus borderRadius__standard transition__fast Box__root backgroundColor__input borderColor__default"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxChecked backgroundColor__formAccent borderRadius__standard transition__fast Box__root backgroundColor__input borderColor__formAccent borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxDisabled borderRadius__standard transition__fast Box__root backgroundColor__inputDisabled borderColor__default borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxCritical borderRadius__standard transition__fast Box__root borderColor__critical borderWidth__standard"
            style="opacity: 0;"
          />
          <svg
            class="Checkbox__checkboxIcon fill__white transition__fast Box__root borderColor__default"
            height="100%"
            viewBox="90.471 302.809 823 823"
            width="100%"
          >
            <path
              d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
            />
          </svg>
        </div>
        <div
          class="Text__block Box__root borderColor__default"
        >
          <span
            class="Text__block color__neutral fontFamily__body fontSize__interaction fontWeight__regular"
            style="transform: none;"
          >
            Label 2
          </span>
        </div>
      </label>
    </div>
    <div
      class="Box__root borderColor__default paddingRight__gutter paddingLeft__gutter"
    >
      <div
        class="Text__block Box__root borderColor__default paddingBottom__small"
        id="2-message"
        tabindex="-1"
      >
        <span
          class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__regular"
        >
          <div
            class="FieldMessage__content"
          >
            <div
              style="min-height: 20px;"
            />
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="Divider__root Box__root borderColor__default"
  >
    <div
      class="Divider__divider borderWidth__standard borderColor__standard"
    />
  </div>
  <div
    class="paddingBottom__smaller"
  >
    <input
      aria-describedby="3-message"
      class="Checkbox__realCheckbox"
      id="3"
      type="checkbox"
    />
    <div
      class="Checkbox__content"
    >
      <label
        class="Checkbox__label Box__root borderColor__default paddingTop__smaller paddingRight__gutter paddingLeft__gutter"
        for="3"
        style="min-height: 44px;"
      >
        <div
          class="Checkbox__checkboxContainer Box__root borderColor__default marginRight__medium"
          style="width: 24px; height: 24px; margin-top: 10px;"
        >
          <div
            class="Checkbox__checkbox borderRadius__standard Box__root backgroundColor__input borderColor__default borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxHover borderRadius__standard Box__root backgroundColor__input borderColor__formAccent borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxFocus boxShadow__focus borderRadius__standard transition__fast Box__root backgroundColor__input borderColor__default"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxChecked backgroundColor__formAccent borderRadius__standard transition__fast Box__root backgroundColor__input borderColor__formAccent borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxDisabled borderRadius__standard transition__fast Box__root backgroundColor__inputDisabled borderColor__default borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxCritical borderRadius__standard transition__fast Box__root borderColor__critical borderWidth__standard"
            style="opacity: 0;"
          />
          <svg
            class="Checkbox__checkboxIcon fill__white transition__fast Box__root borderColor__default"
            height="100%"
            viewBox="90.471 302.809 823 823"
            width="100%"
          >
            <path
              d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
            />
          </svg>
        </div>
        <div
          class="Text__block Box__root borderColor__default"
        >
          <span
            class="Text__block color__neutral fontFamily__body fontSize__interaction fontWeight__regular"
            style="transform: none;"
          >
            Label 3
          </span>
        </div>
      </label>
    </div>
    <div
      class="Box__root borderColor__default paddingRight__gutter paddingLeft__gutter"
    >
      <div
        class="Text__block Box__root borderColor__default paddingBottom__small"
        id="3-message"
        tabindex="-1"
      >
        <span
          class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__regular"
        >
          <div
            class="FieldMessage__content"
          >
            <div
              style="min-height: 20px;"
            />
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChecklistCard Theme: seekAnz Default 1`] = `
<div
  class="Box__root backgroundColor__card borderColor__default marginBottom__medium"
>
  <div
    class="paddingBottom__smaller"
  >
    <input
      aria-describedby="1-message"
      class="Checkbox__realCheckbox"
      id="1"
      type="checkbox"
    />
    <div
      class="Checkbox__content"
    >
      <label
        class="Checkbox__label Box__root borderColor__default paddingTop__smaller paddingRight__gutter paddingLeft__gutter"
        for="1"
        style="min-height: 48px;"
      >
        <div
          class="Checkbox__checkboxContainer Box__root borderColor__default marginRight__medium"
          style="width: 30px; height: 30px; margin-top: 9px;"
        >
          <div
            class="Checkbox__checkbox borderRadius__standard Box__root backgroundColor__input borderColor__default borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxHover borderRadius__standard Box__root backgroundColor__input borderColor__formAccent borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxFocus boxShadow__focus borderRadius__standard transition__fast Box__root backgroundColor__input borderColor__default"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxChecked backgroundColor__formAccent borderRadius__standard transition__fast Box__root backgroundColor__input borderColor__formAccent borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxDisabled borderRadius__standard transition__fast Box__root backgroundColor__inputDisabled borderColor__default borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxCritical borderRadius__standard transition__fast Box__root borderColor__critical borderWidth__standard"
            style="opacity: 0;"
          />
          <svg
            class="Checkbox__checkboxIcon fill__white transition__fast Box__root borderColor__default"
            height="100%"
            viewBox="90.471 302.809 823 823"
            width="100%"
          >
            <path
              d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
            />
          </svg>
        </div>
        <div
          class="Text__block Box__root borderColor__default"
        >
          <span
            class="Text__block color__neutral fontFamily__body fontSize__interaction fontWeight__regular"
            style="transform: none;"
          >
            Label 1
          </span>
        </div>
      </label>
    </div>
    <div
      class="Box__root borderColor__default paddingRight__gutter paddingLeft__gutter"
    >
      <div
        class="Text__block Box__root borderColor__default paddingBottom__small"
        id="1-message"
        tabindex="-1"
      >
        <span
          class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__regular"
        >
          <div
            class="FieldMessage__content"
          >
            <div
              style="min-height: 24px;"
            />
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="Divider__root Box__root borderColor__default"
  >
    <div
      class="Divider__divider borderWidth__standard borderColor__standard"
    />
  </div>
  <div
    class="paddingBottom__smaller"
  >
    <input
      aria-describedby="2-message"
      class="Checkbox__realCheckbox"
      id="2"
      type="checkbox"
    />
    <div
      class="Checkbox__content"
    >
      <label
        class="Checkbox__label Box__root borderColor__default paddingTop__smaller paddingRight__gutter paddingLeft__gutter"
        for="2"
        style="min-height: 48px;"
      >
        <div
          class="Checkbox__checkboxContainer Box__root borderColor__default marginRight__medium"
          style="width: 30px; height: 30px; margin-top: 9px;"
        >
          <div
            class="Checkbox__checkbox borderRadius__standard Box__root backgroundColor__input borderColor__default borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxHover borderRadius__standard Box__root backgroundColor__input borderColor__formAccent borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxFocus boxShadow__focus borderRadius__standard transition__fast Box__root backgroundColor__input borderColor__default"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxChecked backgroundColor__formAccent borderRadius__standard transition__fast Box__root backgroundColor__input borderColor__formAccent borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxDisabled borderRadius__standard transition__fast Box__root backgroundColor__inputDisabled borderColor__default borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxCritical borderRadius__standard transition__fast Box__root borderColor__critical borderWidth__standard"
            style="opacity: 0;"
          />
          <svg
            class="Checkbox__checkboxIcon fill__white transition__fast Box__root borderColor__default"
            height="100%"
            viewBox="90.471 302.809 823 823"
            width="100%"
          >
            <path
              d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
            />
          </svg>
        </div>
        <div
          class="Text__block Box__root borderColor__default"
        >
          <span
            class="Text__block color__neutral fontFamily__body fontSize__interaction fontWeight__regular"
            style="transform: none;"
          >
            Label 2
          </span>
        </div>
      </label>
    </div>
    <div
      class="Box__root borderColor__default paddingRight__gutter paddingLeft__gutter"
    >
      <div
        class="Text__block Box__root borderColor__default paddingBottom__small"
        id="2-message"
        tabindex="-1"
      >
        <span
          class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__regular"
        >
          <div
            class="FieldMessage__content"
          >
            <div
              style="min-height: 24px;"
            />
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="Divider__root Box__root borderColor__default"
  >
    <div
      class="Divider__divider borderWidth__standard borderColor__standard"
    />
  </div>
  <div
    class="paddingBottom__smaller"
  >
    <input
      aria-describedby="3-message"
      class="Checkbox__realCheckbox"
      id="3"
      type="checkbox"
    />
    <div
      class="Checkbox__content"
    >
      <label
        class="Checkbox__label Box__root borderColor__default paddingTop__smaller paddingRight__gutter paddingLeft__gutter"
        for="3"
        style="min-height: 48px;"
      >
        <div
          class="Checkbox__checkboxContainer Box__root borderColor__default marginRight__medium"
          style="width: 30px; height: 30px; margin-top: 9px;"
        >
          <div
            class="Checkbox__checkbox borderRadius__standard Box__root backgroundColor__input borderColor__default borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxHover borderRadius__standard Box__root backgroundColor__input borderColor__formAccent borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxFocus boxShadow__focus borderRadius__standard transition__fast Box__root backgroundColor__input borderColor__default"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxChecked backgroundColor__formAccent borderRadius__standard transition__fast Box__root backgroundColor__input borderColor__formAccent borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxDisabled borderRadius__standard transition__fast Box__root backgroundColor__inputDisabled borderColor__default borderWidth__standard"
          />
          <div
            class="Checkbox__checkbox Checkbox__checkboxCritical borderRadius__standard transition__fast Box__root borderColor__critical borderWidth__standard"
            style="opacity: 0;"
          />
          <svg
            class="Checkbox__checkboxIcon fill__white transition__fast Box__root borderColor__default"
            height="100%"
            viewBox="90.471 302.809 823 823"
            width="100%"
          >
            <path
              d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
            />
          </svg>
        </div>
        <div
          class="Text__block Box__root borderColor__default"
        >
          <span
            class="Text__block color__neutral fontFamily__body fontSize__interaction fontWeight__regular"
            style="transform: none;"
          >
            Label 3
          </span>
        </div>
      </label>
    </div>
    <div
      class="Box__root borderColor__default paddingRight__gutter paddingLeft__gutter"
    >
      <div
        class="Text__block Box__root borderColor__default paddingBottom__small"
        id="3-message"
        tabindex="-1"
      >
        <span
          class="Text__block color__neutral fontFamily__body fontSize__body fontWeight__regular"
        >
          <div
            class="FieldMessage__content"
          >
            <div
              style="min-height: 24px;"
            />
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;
